# filesystem

./: .gitignore  README.md  pyproject.toml  requirements.txt  tests.txt
src/filesystem/: server.py
