[project]
name = "filesystem"
version = "0.2.0"
description = "Secure MCP Filesystem Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "pydantic>=2.0.0",
]

[[project.authors]]
name = "David Matscheko"
email = "d-m@14.gy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
filesystem = "filesystem:main"
